force-app/main/default/objects/Supply_Planner_Assignment__c/Supply_Planner_Assignment__c.object-meta.xml
<CustomObject>
    <description>Routing records to route NIR&apos;s to the appropriate supply planner according to Segment, Division, and Vendor</description>
    <label>Supply Planner Assignment</label>
    <nameField>
        <displayFormat>SPA-{0000}</displayFormat>
        <label>Supply Planner Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Planner Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>