force-app/main/default/objects/Supply_Planner_Assignment__c/fields/Match_String__c.field-meta.xml
<CustomField>
    <fullName>Match_String__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenated string to match routing based upon Vendor - Segment - Division ([Vendor Code]-[Segment]-[Legacy Division Id])</description>
    <externalId>true</externalId>
    <label>Match String</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>