force-app/main/default/objects/Supply_Planner_Assignment__c/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Active?</label>
    <type>Checkbox</type>
</CustomField>