force-app/main/default/objects/Supply_Planner_Assignment__c/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing Division</label>
    <referenceTo>Servicing_Division__c</referenceTo>
    <relationshipName>Buyer_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>