force-app/main/default/objects/Supply_Planner_Assignment__c/fields/Supply_Planner__c.field-meta.xml
<CustomField>
    <fullName>Supply_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Buyer_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>