force-app/main/default/objects/Supply_Planner_Assignment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipName>Buyer_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>