force-app/main/default/objects/Supply_Planner_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Vendor__c</columns>
    <columns>Segment__c</columns>
    <columns>Servicing_Division__c</columns>
    <columns>Supply_Planner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Match_String__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>