force-app/main/default/objects/Supply_Planner_Assignment__c/listViews/Print.listView-meta.xml
<ListView>
    <fullName>Print</fullName>
    <columns>Vendor__c</columns>
    <columns>Segment__c</columns>
    <columns>Servicing_Division__c</columns>
    <columns>Supply_Planner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Match_String__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Print</value>
    </filters>
    <label>Print</label>
</ListView>